--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
           <form class="md-form" method="POST" action='.'>{% csrf_token %}
             <label for="id_original"></label>
             <input class="form-control" type="text" name="original" maxlength="300" required="" id="id_original"><br>
-          <button class="btn btn-lg btn-secondary" type="submit">Shrink!</button>
+          <button id="submit" class="btn btn-lg btn-secondary" type="submit">Shrink!</button>
           </form>
           <br>
           <br>
